--- a/menu/sobre.html
+++ b/menu/sobre.html
@@ -139,8 +139,8 @@
 			<p>
 			<b>Versão:</b> 1.0.0 <br/>
 			<b>Compilação:</b> 26/06/2012 <br/>
-			<b>Autores:</b> Wesllen Sousa Lima, Hendrio Luis<br/>
-			<b>Contatos:</b> wesllen.wsl@gmail.com, hendrioluis@hotmail.com <br/>
+			<b>Autores:</b> Wesllen Sousa Lima<br/>
+			<b>Contatos:</b> wesllen.wsl@gmail.com<br/>
 			</p>
 			
 			<h2>Nota</h2>
